--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "lazyload": "^2.0.0-rc.2",
     "smui-theme": "^7.0.0-beta.15",
     "svelte": "^4.0.5",
+    "svelte-file-dropzone": "^2.0.2",
     "vite": "^4.4.5"
   }
 }
