--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "smui-theme": "^7.0.0-beta.15",
     "svelte": "^4.0.5",
     "svelte-file-dropzone": "^2.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "svelte-chartjs": "3.1.2"
   }
 }
