--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,14 @@
     "@smui/button": "^7.0.0-beta.15",
     "@smui/card": "^7.0.0-beta.15",
     "@smui/layout-grid": "^7.0.0-beta.15",
+    "@sveltejs/svelte-virtual-list": "^3.0.1",
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
     "lazyload": "^2.0.0-rc.2",
     "smui-theme": "^7.0.0-beta.15",
     "svelte": "^4.0.5",
     "svelte-chartjs": "3.1.2",
     "svelte-file-dropzone": "^2.0.2",
+    "svelte-video-player": "^1.2.5",
     "vite": "^4.4.5"
   },
   "devDependencies": {
