--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,6 @@
     "lazyload": "^2.0.0-rc.2",
     "smui-theme": "^7.0.0-beta.15",
     "svelte": "^4.0.5",
-    "svelte-chartjs": "3.1.2",
     "svelte-file-dropzone": "^2.0.2",
     "svelte-video-player": "^1.2.5",
     "vite": "^4.4.5"
@@ -27,7 +26,6 @@
   "devDependencies": {
     "@smui/fab": "^7.0.0-beta.15",
     "@smui/image-list": "^7.0.0-beta.15",
-    "@smui/select": "^7.0.0-beta.15",
-    "@types/chart.js": "^2.9.38"
+    "@smui/select": "^7.0.0-beta.15"
   }
 }
