--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
     "lazyload": "^2.0.0-rc.2",
     "openapi-generator": "^0.1.39",
+    "random-words": "^2.0.0",
     "smui-theme": "^7.0.0-beta.15",
     "svelte": "^4.0.5",
     "svelte-file-dropzone": "^2.0.2",
