--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,4 +3,10 @@ services:
         build: .
         ports:
             - '8000:8000'
+        networks:
+            - vbs-backend_default
 
+networks:
+    backend:
+        driver: bridge
+        external: true
