fix sending lsc

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,5 @@ services:
             - vbs-backend_default
 
 networks:
-    backend:
-        driver: bridge
+    vbs-backend_default:
         external: true
