--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
         build: .
         ports:
             - '8000:8000'
+        volumes:
+            - ./user_data:./user_data
         networks:
             - vbs-backend_default
 
