--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
         ports:
             - '8000:8000'
         volumes:
-            - ./user_data:./user_data
+            - ./user_data:/app/user_data
         networks:
             - vbs-backend_default
 
