--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,10 @@
     "@smui/button": "^7.0.0-beta.15",
     "@smui/card": "^7.0.0-beta.15",
     "@smui/layout-grid": "^7.0.0-beta.15",
+    "@smui/textfield": "^7.0.0-beta.15",
+    "@smui/checkbox": "^7.0.0-beta.15",
+    "@smui/form-field": "^7.0.0-beta.15",
+    "@smui/tooltip": "^7.0.0-beta.15",
     "@sveltejs/svelte-virtual-list": "^3.0.1",
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
     "lazyload": "^2.0.0-rc.2",
