--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,13 +27,15 @@
     "svelte-file-dropzone": "^2.0.2",
     "svelte-select": "^5.8.3",
     "svelte-video-player": "^1.2.5",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "crypto-js": "^4.1.1"
   },
   "devDependencies": {
     "@smui/fab": "^7.0.0-beta.15",
     "@smui/image-list": "^7.0.0-beta.15",
     "@smui/select": "^7.0.0-beta.15",
     "openapi-generator": "^0.1.39",
-    "svelte": "^4.2.9"
+    "svelte": "^4.2.9",
+    "vite-plugin-env-compatible": "2.0.1"
   }
 }
