--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,47 @@
 services:
-    app:
+
+    redis:
+        image: redis
+        networks:
+            - vbs-backend_default
+
+    app1:
         build: .
-        ports:
-            - '8000:8000'
+        expose:
+            - '8080'
         volumes:
             - ./user_data:/app/user_data
+        networks:
+            - vbs-backend_default
+        container_name: app1
+        environment:
+            - WORKER_ID=1
+        depends_on:
+            - redis
+
+    app2:
+        build: .
+        expose:
+            - '8080'
+        volumes:
+            - ./user_data:/app/user_data
+        networks:
+            - vbs-backend_default
+        container_name: app2
+        environment:
+            - WORKER_ID=2
+        depends_on:
+            - redis
+
+    reverse-proxy:
+        image: nginx:latest
+        ports:
+            - "8000:8001"
+        volumes:
+            - ./nginx.conf:/etc/nginx/nginx.conf:ro
+        depends_on:
+            - app1
+            - app2
         networks:
             - vbs-backend_default
 
